# unsloth

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Llama_3_2_1B+3B_Conversational_+_2x_faster_finetuning.ipynb  README.md  docker-compose.yml  main.py  old.Dockerfile  pyproject.toml  pytorch-cuda.dockerfile  requirements.txt  start.sh
datasets/: fix_shortstories.py
docker/: jupyter.dockerfile  start.sh  unsloth-pytorch.dockerfile  unsloth.dockerfile
harmonic/: 2.ipynb  3.ipynb
papers/: paddingFree.txt
recipes/: Falcon3-1B.py  Falcon3-3B-RP.py  Falcon3-3B-qlora-1k.py  Falcon3-3B.py  Falcon3-7B.py  Gemma-3-4B.py  Llama-3.1-8B-sugarquill.py  Llama-3.1-8B.py  Llama-3.2-3B.py  Qwen2.5-3B.py  SmolLM2-1.7B-Duck.py  SmolLM2-1.7B-qlora-1k.py  SmolLM2-1.7B.py  abliterate.py  flatpack.py  test-checkpoint.py
recipes/Falcon3-tokenizer/: special_tokens_map.json
src/: utils.py
src/datasets/: create-sugarquill-losslogs.py  fix_shortstories.py
src/recipes/: Falcon3-1B.py  Falcon3-3B-RP.py  Falcon3-3B.py  Granite3-2B.py  Llama-3.2-3B.py  flatpack.py  test-checkpoint.py
src/recipes/Falcon3-tokenizer/: tokenizer_config.json
utils/: flatpack_utils.py
